# buying_winners_vietnam

./: .gitignore  .tmp_head_hnx.txt  .tmp_head_hsx.txt  .tmp_inv_1.txt  .tmp_inv_py.txt  README.md  implementation_plan.md  index.csv  momentum_problem_statement.md  momentum_research_design.md  momentum_technical_requirements_document.md  pyproject.toml
config/: data.yml
results/runs/J6K6/: results.json
results/runs/J6K6/artifacts/: report.html
results/runs/J6K6/artifacts/tables/: equity_curve.csv  metrics.json  stats.json
scripts/: _debug_cv.py  grid_search.py  make_clean.py  make_report.py  run_backtest.py
src/: __init__.py
src/bwv/: __init__.py  backtest.py  costs.py  cv.py  data_io.py  experiment_tracking.py  filters.py  metrics.py  momentum.py  portfolio.py  report.py  returns.py  stats.py  utils.py
tests/: conftest.py  test_costs.py  test_cv.py  test_data_io.py  test_environment.py  test_experiment_tracking.py  test_filters.py  test_filters_scaling.py  test_indices_dir.py  test_ingest_parquet.py  test_metrics.py  test_momentum.py  test_portfolio.py  test_report.py  test_returns.py  test_seed.py  test_stats.py
